Fixing net standard to net framework issue

--- a/CSharp/Mazes/MazeGenerator/MazeGenerator.csproj
+++ b/CSharp/Mazes/MazeGenerator/MazeGenerator.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard1.5</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Grid\Grid.csproj" />
+    <ProjectReference Include="..\MazeAlgorithms\MazeAlgorithms.csproj" />
+  </ItemGroup>
 
 </Project>
