--- a/CSharp/Mazes/Grid/Grid.csproj
+++ b/CSharp/Mazes/Grid/Grid.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="1.6.1" />
+  </ItemGroup>
+
 </Project>
