--- a/CSharp/Mazes/MazeGenerator/MazeGenerator.csproj
+++ b/CSharp/Mazes/MazeGenerator/MazeGenerator.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\MazeAlgorithms\MazeAlgorithms.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="1.6.1" />
+  </ItemGroup>
+
 </Project>
