--- a/CSharp/Mazes/MazeGenerator/MazeGenerator.csproj
+++ b/CSharp/Mazes/MazeGenerator/MazeGenerator.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Grid\Grid.csproj" />
     <ProjectReference Include="..\MazeAlgorithms\MazeAlgorithms.csproj" />
+    <ProjectReference Include="..\Solver\Solver.csproj" />
   </ItemGroup>
 
   <ItemGroup>
