--- a/Haskell/Maze/package.yaml
+++ b/Haskell/Maze/package.yaml
@@ -22,7 +22,7 @@ description:         Please see the README on Github at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - random
-- containers
+- lens
 
 library:
   source-dirs: src
